--- a/restfulApp/src/main/webapp/WEB-INF/web.xml
+++ b/restfulApp/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 	</filter-mapping>
 
 	<servlet>
-		<servlet-name>spring-mvc-application</servlet-name>
+		<servlet-name>restfulApp</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -33,7 +33,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>spring-mvc-application</servlet-name>
+		<servlet-name>restfulApp</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<error-page>
